--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build:worker": "esbuild worker/index.ts --bundle --format=esm --outfile=dist/_worker.js --platform=browser",
     "preview": "vite preview",
     "deploy": "npm run build",
-    "manual-deploy": "npm run build && npx wrangler pages deploy dist"
+    "manual-deploy": "npm run build && npx wrangler pages deploy dist --project-name=nai-prompt-manager --branch=main"
   },
   "dependencies": {
     "react": "^19.2.3",
