--- a/wrangler.toml
+++ b/wrangler.toml
@@ -3,16 +3,15 @@ name = "nai-prompt-manager"
 compatibility_date = "2024-04-01"
 pages_build_output_dir = "dist"
 
-# [重要] 数据库配置说明
-# 由于 database_id 不支持环境变量，为了避免部署报错，请按照以下步骤在 Cloudflare 后台配置：
-# 1. 进入 Pages 项目 -> Settings -> Functions
-# 2. 找到 "D1 Database Bindings"
-# 3. 添加绑定:
-#    - Variable name: DB
-#    - D1 database: 选择你创建的数据库 (e.g., nai-db)
+# [D1 Database Configuration]
+# 为了让 Preview 和 Production 都能稳定找到数据库，建议保留此配置
+# 请将下方的 id 替换为你真实的 D1 Database ID (在 Cloudflare Dashboard -> D1 可以看到)
+[[d1_databases]]
+binding = "DB"
+database_name = "nai-db"
+database_id = "04b0c4f6-8b3b-4e1d-a880-2dfe4f7d75f7"
 
 [vars]
-# 这里的变量用于本地开发，生产环境请在 Pages Dashboard 的 Settings -> Environment variables 中设置
+# 这里的变量用于本地开发，生产环境建议在 Pages Dashboard 的 Settings -> Environment variables 中设置
 NAI_API_KEY = ""
 MASTER_KEY = "admin888"
-DB = "nai-db"
