--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "tsc -b && vite build && npm run build:worker",
     "build:worker": "esbuild worker/index.ts --bundle --format=esm --outfile=dist/_worker.js --platform=browser",
     "preview": "vite preview",
-    "deploy": "npm run build",
+    "deploy": "npm run build && npx wrangler pages project create nai-prompt-manager --production-branch main || true && npx wrangler pages deploy dist --project-name=nai-prompt-manager",
     "manual-deploy": "npm run build && npx wrangler pages deploy dist --project-name=nai-prompt-manager --branch=main"
   },
   "dependencies": {
